kubernetes/volunteer-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volunteer-deploy
  namespace: volunteer-service
  labels:
    app: volunteer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volunteer-service
  template:
    metadata:
      labels:
        app: volunteer-service
    spec:
      containers:
        - name: volunteer-service
          image: 498686972093.dkr.ecr.us-east-1.amazonaws.com/tech5/volunteer-service:2eea4b3e4554b1256c78cd014b3c90416f14a644
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "50m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            capabilities:
              drop:
                - ALL
