kubernetes/volunteer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volunteer-service-clusterip
  namespace: volunteer-service
  labels:
    app: volunteer-service
spec:
  selector:
    app: volunteer-service
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
