kubernetes/volunteer-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunteer-ingress
  namespace: volunteer-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /volunteer(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: volunteer-service-clusterip
                port:
                  number: 8083
